# smart_shopper

./: .gitignore  Dockerfile  Makefile  README.md  azure-pipelines.yml  docker-compose.yml  pyproject.toml
config/: secrets  secrets_template
notebooks/: grouped_products.pickle  test_costco_pipeline.ipynb  test_scrape.ipynb
smart_shopper/: __init__.py  client.py  email.py  llm.py  mail.py  main.py  models.py  settings.py  tools.py  website.py
smart_shopper/stores/: base.py
smart_shopper/stores/costco/: chain.py  pipeline.py
